--- a/ProjectDirectory.csproj
+++ b/ProjectDirectory.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="FontAwesome.WPF" Version="4.7.0.9" />
+	  <Content Include="AutobuildJsons\**">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
   </ItemGroup>
-
 </Project>
